headermodifier/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headermodifier-svc-v1
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: headermodifier-v1
---
apiVersion: v1
kind: Service
metadata:
  name: headermodifier-svc-v2
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: headermodifier-v2
